--- a/index.html
+++ b/index.html
@@ -1,1 +1,22 @@
+<!DOCTYPE html>
+<html lang="es">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Portafolio – Análisis de Datos</title>
+</head>
+<body>
+  <h1>Hola 👋</h1>
+  <p>Soy analista de datos con formación en ingeniería de sistemas y experiencia en proyectos reales de visualización y análisis.</p>
+
+  <h2>Proyectos destacados</h2>
+  <ul>
+    <li><a href="https://github.com/dianitais/Analisis_de_Datos_de_Vehiculos_con_Streamlit">Análisis de vehículos con Streamlit</a></li>
+    <li><a href="https://github.com/dianitais/DA_Taxis_Chicago">Exploración de datos de taxis en Chicago</a></li>
+    <li><a href="https://github.com/dianitais/Analisis_de_metricas_de_marketing_y_ventas_en_Showz">Análisis de métricas de ventas y marketing</a></li>
+  </ul>
+
+  <p>📫 Puedes contactarme por <a href="https://www.linkedin.com/in/dianitais/" target="_blank">LinkedIn</a></p>
+</body>
+</html>
 
