--- a/index.html
+++ b/index.html
@@ -1,22 +1,39 @@
-<!DOCTYPE html>
-<html lang="es">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Portafolio – Análisis de Datos</title>
-</head>
-<body>
-  <h1>Hola 👋</h1>
-  <p>Soy analista de datos con formación en ingeniería de sistemas y experiencia en proyectos reales de visualización y análisis.</p>
+<p align="center">
+  <img src="https://github.com/user-attachments/assets/7277abae-2668-4de5-863a-adbaba78f5a7" alt="Banner" width="100%" />
+</p>
 
-  <h2>Proyectos destacados</h2>
-  <ul>
-    <li><a href="https://github.com/dianitais/Analisis_de_Datos_de_Vehiculos_con_Streamlit">Análisis de vehículos con Streamlit</a></li>
-    <li><a href="https://github.com/dianitais/DA_Taxis_Chicago">Exploración de datos de taxis en Chicago</a></li>
-    <li><a href="https://github.com/dianitais/Analisis_de_metricas_de_marketing_y_ventas_en_Showz">Análisis de métricas de ventas y marketing</a></li>
-  </ul>
+👋 #¡Hola! Soy analista de datos con formación en ingeniería de sistemas. Me especializo en transformar información en algo visual y fácil de entender para apoyar mejores decisiones. Me encanta organizar datos, encontrar patrones útiles y compartir hallazgos de forma clara.
 
-  <p>📫 Puedes contactarme por <a href="https://www.linkedin.com/in/dianitais/" target="_blank">LinkedIn</a></p>
-</body>
-</html>
+🔗 [Conéctate conmigo en LinkedIn](https://www.linkedin.com/in/dianagonz%C3%A1lezs/)
 
+## 🔍 ¿Qué sé hacer?  
+✅ **Entender los datos:** Reviso, limpio y preparo información para que tenga sentido.
+✅ **Visualizar resultados:** Uso herramientas que permiten ver la información como gráficos, paneles o mapas interactivos.
+✅ **Mejorar procesos:** Encuentro formas de ahorrar tiempo y evitar tareas repetitivas.
+✅ **Comunicar con claridad:** Explico lo importante sin tecnicismos, para que todos entiendan el valor que hay detrás de los números.
+
+💡 Creo que los datos bien estructurados pueden contar una historia poderosa y ayudar a las empresas a tomar mejores decisiones. Mi objetivo es seguir creciendo en el mundo del análisis de datos e inteligencia de negocios, contribuyendo con soluciones que generen impacto. 🚀
+
+
+📊 ¿Qué herramientas uso?
+- Python y SQL (para trabajar con datos)
+- Tableau y Dash (para mostrar resultados de forma visual)
+- Excel (para análisis rápido y ordenado)
+- Otros: pandas, matplotlib, seaborn (librerías que me ayudan a explorar e interpretar información)
+
+
+🚀 ¿Qué me motiva?
+Creo que los datos pueden contar historias poderosas. Me gusta trabajar con equipos donde se valore la claridad, el orden y el aprendizaje continuo. Mi objetivo es seguir creciendo profesionalmente y contribuir con soluciones que generen impacto real.
+
+
+<!--
+## 📊 Mis estadísticas:
+
+<p align="center">
+  <img src="https://github-readme-stats.vercel.app/api/top-langs/?username=dianitais&layout=compact&theme=dark" />
+</p>
+<br>
+<p align="center">
+  <img src="https://github-readme-stats.vercel.app/api?username=dianitais&show_icons=true&theme=dark" />
+</p>
+-->
