--- a/index.html
+++ b/index.html
@@ -1,39 +1,73 @@
-<p align="center">
-  <img src="https://github.com/user-attachments/assets/7277abae-2668-4de5-863a-adbaba78f5a7" alt="Banner" width="100%" />
-</p>
+<!DOCTYPE html>
+<html lang="es">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Diana González – Portafolio de Análisis de Datos</title>
+  <style>
+    body {
+      font-family: Arial, sans-serif;
+      max-width: 800px;
+      margin: 40px auto;
+      line-height: 1.6;
+      padding: 0 20px;
+    }
+    h1, h2 {
+      color: #333;
+    }
+    ul {
+      padding-left: 20px;
+    }
+    .section {
+      margin-top: 30px;
+    }
+    .emoji {
+      font-size: 1.3em;
+      margin-right: 5px;
+    }
+  </style>
+</head>
+<body>
 
-👋 #¡Hola! Soy analista de datos con formación en ingeniería de sistemas. Me especializo en transformar información en algo visual y fácil de entender para apoyar mejores decisiones. Me encanta organizar datos, encontrar patrones útiles y compartir hallazgos de forma clara.
+  <p align="center">
+    <img src="https://github.com/user-attachments/assets/7277abae-2668-4de5-863a-adbaba78f5a7" alt="Banner" width="100%">
+  </p>
 
-🔗 [Conéctate conmigo en LinkedIn](https://www.linkedin.com/in/dianagonz%C3%A1lezs/)
+  <h1><span class="emoji">👋</span>¡Hola!</h1>
+  <p>
+    Soy analista de datos con formación en ingeniería de sistemas. Me especializo en transformar información en algo visual y fácil de entender para apoyar mejores decisiones. Me encanta organizar datos, encontrar patrones útiles y comunicar resultados de manera clara.
+  </p>
 
-## 🔍 ¿Qué sé hacer?  
-✅ **Entender los datos:** Reviso, limpio y preparo información para que tenga sentido.
-✅ **Visualizar resultados:** Uso herramientas que permiten ver la información como gráficos, paneles o mapas interactivos.
-✅ **Mejorar procesos:** Encuentro formas de ahorrar tiempo y evitar tareas repetitivas.
-✅ **Comunicar con claridad:** Explico lo importante sin tecnicismos, para que todos entiendan el valor que hay detrás de los números.
+  <p>
+    📎 <a href="https://www.linkedin.com/in/dianagonz%C3%A1lez/" target="_blank">Conéctate conmigo en LinkedIn</a>
+  </p>
 
-💡 Creo que los datos bien estructurados pueden contar una historia poderosa y ayudar a las empresas a tomar mejores decisiones. Mi objetivo es seguir creciendo en el mundo del análisis de datos e inteligencia de negocios, contribuyendo con soluciones que generen impacto. 🚀
+  <div class="section">
+    <h2><span class="emoji">🛠</span> ¿Qué sé hacer?</h2>
+    <ul>
+      <li><strong>Entender los datos:</strong> Reviso, limpio y preparo información para que tenga sentido.</li>
+      <li><strong>Visualizar resultados:</strong> Uso herramientas para mostrar la información como gráficos, paneles o mapas interactivos.</li>
+      <li><strong>Mejorar procesos:</strong> Encuentro formas de ahorrar tiempo y evitar tareas repetitivas.</li>
+      <li><strong>Comunicar con claridad:</strong> Explico lo importante sin tecnicismos, para que todos entiendan el valor que hay detrás de los números.</li>
+    </ul>
+  </div>
 
+  <div class="section">
+    <h2><span class="emoji">💻</span> ¿Qué herramientas uso?</h2>
+    <ul>
+      <li>Python y SQL (para trabajar con datos)</li>
+      <li>Tableau y Dash (para mostrar resultados de forma visual)</li>
+      <li>Excel (para análisis rápido y ordenado)</li>
+      <li>Otros: pandas, matplotlib, seaborn (librerías que me ayudan a explorar e interpretar información)</li>
+    </ul>
+  </div>
 
-📊 ¿Qué herramientas uso?
-- Python y SQL (para trabajar con datos)
-- Tableau y Dash (para mostrar resultados de forma visual)
-- Excel (para análisis rápido y ordenado)
-- Otros: pandas, matplotlib, seaborn (librerías que me ayudan a explorar e interpretar información)
+  <div class="section">
+    <h2><span class="emoji">✨</span> ¿Qué me motiva?</h2>
+    <p>
+      Creo que los datos pueden contar historias poderosas. Me gusta trabajar con equipos donde se valore la claridad, el orden y el aprendizaje continuo. Mi objetivo es seguir creciendo profesionalmente y contribuir con soluciones que generen impacto.
+    </p>
+  </div>
 
-
-🚀 ¿Qué me motiva?
-Creo que los datos pueden contar historias poderosas. Me gusta trabajar con equipos donde se valore la claridad, el orden y el aprendizaje continuo. Mi objetivo es seguir creciendo profesionalmente y contribuir con soluciones que generen impacto real.
-
-
-<!--
-## 📊 Mis estadísticas:
-
-<p align="center">
-  <img src="https://github-readme-stats.vercel.app/api/top-langs/?username=dianitais&layout=compact&theme=dark" />
-</p>
-<br>
-<p align="center">
-  <img src="https://github-readme-stats.vercel.app/api?username=dianitais&show_icons=true&theme=dark" />
-</p>
--->
+</body>
+</html>
