--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Diana González – Portafolio de Análisis de Datos</title>
+  <title>Portafolio de Análisis de Datos</title>
   <style>
     body {
       font-family: Arial, sans-serif;
@@ -25,17 +25,21 @@
       font-size: 1.3em;
       margin-right: 5px;
     }
+    img.banner {
+      width: 100%;
+      border-radius: 10px;
+    }
   </style>
 </head>
 <body>
 
   <p align="center">
-    <img src="https://github.com/user-attachments/assets/7277abae-2668-4de5-863a-adbaba78f5a7" alt="Banner" width="100%">
+    <img class="banner" src="https://github.com/user-attachments/assets/7277abae-2668-4de5-863a-adbaba78f5a7" alt="Banner">
   </p>
 
   <h1><span class="emoji">👋</span>¡Hola!</h1>
   <p>
-    Soy analista de datos con formación en ingeniería de sistemas. Me especializo en transformar información en algo visual y fácil de entender para apoyar mejores decisiones. Me encanta organizar datos, encontrar patrones útiles y comunicar resultados de manera clara.
+    Soy analista de datos con formación en ingeniería de sistemas. Me especializo en transformar información en algo visual y fácil de entender para apoyar mejores decisiones. Me encanta organizar datos, encontrar patrones útiles y comunicar resultados de forma clara.
   </p>
 
   <p>
@@ -43,7 +47,7 @@
   </p>
 
   <div class="section">
-    <h2><span class="emoji">🛠</span> ¿Qué sé hacer?</h2>
+    <h2><span class="emoji">🛠️</span> ¿Qué sé hacer?</h2>
     <ul>
       <li><strong>Entender los datos:</strong> Reviso, limpio y preparo información para que tenga sentido.</li>
       <li><strong>Visualizar resultados:</strong> Uso herramientas para mostrar la información como gráficos, paneles o mapas interactivos.</li>
@@ -58,14 +62,14 @@
       <li>Python y SQL (para trabajar con datos)</li>
       <li>Tableau y Dash (para mostrar resultados de forma visual)</li>
       <li>Excel (para análisis rápido y ordenado)</li>
-      <li>Otros: pandas, matplotlib, seaborn (librerías que me ayudan a explorar e interpretar información)</li>
+      <li>Otros: pandas, matplotlib, seaborn (para explorar e interpretar información)</li>
     </ul>
   </div>
 
   <div class="section">
     <h2><span class="emoji">✨</span> ¿Qué me motiva?</h2>
     <p>
-      Creo que los datos pueden contar historias poderosas. Me gusta trabajar con equipos donde se valore la claridad, el orden y el aprendizaje continuo. Mi objetivo es seguir creciendo profesionalmente y contribuir con soluciones que generen impacto.
+      Creo que los datos pueden contar historias poderosas. Me gusta trabajar con equipos donde se valore la claridad, el orden y el aprendizaje continuo. Mi objetivo es seguir creciendo profesionalmente y contribuir con soluciones que generen impacto real.
     </p>
   </div>
 
