--- a/index.html
+++ b/index.html
@@ -75,3 +75,12 @@
 
 </body>
 </html>
+
+<div class="section">
+  <h2><span class="emoji">👩‍💻</span> ¿Eres técnico o técnica y quieres ver más?</h2>
+  <p>
+    Puedes explorar mi portafolio completo con notebooks, dashboards y proyectos en código desde mi perfil de GitHub:<br>
+    🔗 <a href="https://github.com/dianitais" target="_blank">github.com/dianitais</a>
+  </p>
+</div>
+
