--- a/index.html
+++ b/index.html
@@ -74,6 +74,29 @@
   </div>
 
   <div class="section">
+  <h2><span class="emoji">📊</span> Proyectos destacados</h2>
+
+  <!-- Proyecto 1 -->
+  <h3>🔍 Análisis de vehículos con Streamlit</h3>
+  <img src="https://user-images.githubusercontent.com/123456789/vehiculos_dashboard.png" alt="Dashboard vehículos" width="100%" style="border-radius: 10px;">
+  <p>Dashboard interactivo para comparar vehículos según precio, consumo y eficiencia. Permite filtrar por marca, año y más, facilitando decisiones de compra.</p>
+  <p><a href="https://github.com/dianitais/Analisis_de_Datos_de_Vehiculos_con_Streamlit" target="_blank">Ver proyecto en GitHub</a></p>
+
+  <!-- Proyecto 2 -->
+  <h3>🚕 Exploración de datos de taxis en Chicago</h3>
+  <img src="https://user-images.githubusercontent.com/123456789/taxis_chicago.png" alt="Mapa de taxis" width="100%" style="border-radius: 10px;">
+  <p>Estudio de patrones de viaje, zonas de alta demanda y relación entre clima y movilidad. Incluye limpieza de datos y análisis con SQL y Python.</p>
+  <p><a href="https://github.com/dianitais/DA_Taxis_Chicago" target="_blank">Ver proyecto en GitHub</a></p>
+
+  <!-- Proyecto 3 -->
+  <h3>📈 Análisis de métricas de ventas y marketing</h3>
+  <img src="https://user-images.githubusercontent.com/123456789/ventas_showz.png" alt="Gráfico de métricas" width="100%" style="border-radius: 10px;">
+  <p>Unificación de datos de visitas, campañas y ventas para detectar oportunidades de mejora. El análisis ayudó a visualizar la rentabilidad y eficiencia comercial.</p>
+  <p><a href="https://github.com/dianitais/Analisis_de_metricas_de_marketing_y_ventas_en_Showz" target="_blank">Ver proyecto en GitHub</a></p>
+</div>
+
+  
+  <div class="section">
   <h2><span class="emoji">👩‍💻</span> ¿Eres técnico o técnica y quieres ver más?</h2>
   <p>
     Puedes explorar mi portafolio completo con notebooks, dashboards y proyectos en código desde mi perfil de GitHub:<br>
