--- a/index.html
+++ b/index.html
@@ -84,8 +84,10 @@
 
   <!-- Proyecto 2 -->
   <h3>🚕 Exploración de datos de taxis en Chicago</h3>
-  <img src="https://user-images.githubusercontent.com/123456789/taxis_chicago.png" alt="Mapa de taxis" width="100%" style="border-radius: 10px;">
-  <p>Estudio de patrones de viaje, zonas de alta demanda y relación entre clima y movilidad. Incluye limpieza de datos y análisis con SQL y Python.</p>
+  <img src="Taxis_Chicago.png" alt="Duración de viajes en días lluviosos" width="100%" style="border-radius: 10px;">
+  <p>  Este proyecto analiza viajes en taxi durante los fines de semana en Chicago y busca responder una pregunta clave: <strong>¿la duración promedio de los viajes cambia cuando llueve?</strong>  </p>
+  <p>  Usando datos históricos, encontré que <strong>los sábados lluviosos tienden a tener viajes más largos</strong> que los días secos. La diferencia fue estadísticamente significativa, lo que sugiere que <em>el clima afecta el comportamiento de los pasajeros o el tráfico en la ciudad.</em> </p>
+  <p> Además, analicé qué barrios reciben más viajes y qué compañías tienen mayor volumen, para entender mejor cómo se mueve la ciudad.</p>
   <p><a href="https://github.com/dianitais/DA_Taxis_Chicago" target="_blank">Ver proyecto en GitHub</a></p>
 
   <!-- Proyecto 3 -->
