--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
 
   <!-- Proyecto 1 -->
   <h3>🔍 Análisis de vehículos con Streamlit</h3>
-  <img src="StreamliteVehiculos.png" alt="Dashboard vehículos" width="100%" style="border-radius: 10px;">
+  <img src="StreamliteVehiculos.png" alt="Dashboard vehículos" width="55%" style="border-radius: 10px;">
   <p>Dashboard interactivo para comparar vehículos según precio, consumo y eficiencia. Permite filtrar por marca, año y más, facilitando decisiones de compra.</p>
   <p><a href="https://github.com/dianitais/Analisis_de_Datos_de_Vehiculos_con_Streamlit" target="_blank">Ver proyecto en GitHub</a></p>
 
@@ -87,7 +87,7 @@
   <img src="Taxis_Chicago.png" alt="Duración de viajes en días lluviosos" width="100%" style="border-radius: 10px;">
   <p>  Este proyecto analiza viajes en taxi durante los fines de semana en Chicago y busca responder una pregunta clave: <strong>¿la duración promedio de los viajes cambia cuando llueve?</strong>  </p>
   <p>  Usando datos históricos, encontré que <strong>los sábados lluviosos tienden a tener viajes más largos</strong> que los días secos. La diferencia fue estadísticamente significativa, lo que sugiere que <em>el clima afecta el comportamiento de los pasajeros o el tráfico en la ciudad.</em> </p>
-  <p> Además, analicé qué barrios reciben más viajes y qué compañías tienen mayor volumen, para entender mejor cómo se mueve la ciudad.</p>
+  <p> Además, exploré qué barrios recibieron más viajes ese mes y cuáles compañías concentraron la mayor cantidad de trayectos, para entender cómo se mueve la ciudad desde distintos ángulos.</p>
   <p><a href="https://github.com/dianitais/DA_Taxis_Chicago" target="_blank">Ver proyecto en GitHub</a></p>
 
   <!-- Proyecto 3 -->
