--- a/index.html
+++ b/index.html
@@ -78,8 +78,8 @@
 
   <!-- Proyecto 1 -->
   <h3>🔍 Análisis de vehículos con Streamlit</h3>
-  <img src="StreamliteVehiculos.png" alt="Dashboard vehículos" width="55%" style="border-radius: 10px;">
-  <p>Dashboard interactivo para comparar vehículos según precio, consumo y eficiencia. Permite filtrar por marca, año y más, facilitando decisiones de compra.</p>
+  <img src="StreamliteVehiculos.png" alt="Dashboard vehículos" width="75%" style="border-radius: 10px;">
+  <p>Este dashboard muestra datos reales de vehículos usados y permite ver cuántos kilómetros tienen y cómo influye esto en el precio. Es útil para descubrir si un auto con más recorrido es realmente más barato.</p>
   <p><a href="https://github.com/dianitais/Analisis_de_Datos_de_Vehiculos_con_Streamlit" target="_blank">Ver proyecto en GitHub</a></p>
 
   <!-- Proyecto 2 -->
