--- a/index.html
+++ b/index.html
@@ -91,13 +91,13 @@
   <p><a href="https://github.com/dianitais/DA_Taxis_Chicago" target="_blank">Ver proyecto en GitHub</a></p>
 
   <!-- Proyecto 3 -->
-  <h3>📈 Análisis de métricas de ventas y marketing</h3>
-  <img src="https://user-images.githubusercontent.com/123456789/ventas_showz.png" alt="Gráfico de métricas" width="100%" style="border-radius: 10px;">
-  <p>Unificación de datos de visitas, campañas y ventas para detectar oportunidades de mejora. El análisis ayudó a visualizar la rentabilidad y eficiencia comercial.</p>
+  <h3>📈 Análisis de métricas de marketing y ventas en Showz</h3>
+  <img src="MarketingShowz.png" alt="ROMI por dispositivo" width="80%" style="border-radius: 10px;">
+  <p>Este proyecto analiza datos reales de visitas, campañas y ventas para detectar oportunidades de mejora en la estrategia de marketing digital. </p>
+  <p>Uno de los hallazgos clave fue que <strong>los dispositivos táctiles generaron un mayor retorno de inversión (ROMI)</strong> a pesar de tener menos visitas que los computadores. Esto sugiere que campañas dirigidas a móviles pueden ser más rentables para la empresa.</p>
+  <p>Además, se analizaron otras métricas como la tasa de conversión, el promedio de compra por usuario, el comportamiento de los clientes y el costo de adquisición por canal, permitiendo priorizar las fuentes más eficientes y rentables.</p>
   <p><a href="https://github.com/dianitais/Analisis_de_metricas_de_marketing_y_ventas_en_Showz" target="_blank">Ver proyecto en GitHub</a></p>
-</div>
 
-  
   <div class="section">
   <h2><span class="emoji">👩‍💻</span> ¿Eres técnico o técnica y quieres ver más?</h2>
   <p>
