--- a/index.html
+++ b/index.html
@@ -94,8 +94,8 @@
   <h3>📈 Análisis de métricas de marketing y ventas en Showz</h3>
   <img src="MarketingShowz.png" alt="ROMI por dispositivo" width="80%" style="border-radius: 10px;">
   <p>Este proyecto analiza datos reales de visitas, campañas y ventas para detectar oportunidades de mejora en la estrategia de marketing digital. </p>
-  <p>Uno de los hallazgos clave fue que <strong>los dispositivos táctiles generaron un mayor retorno de inversión (ROMI)</strong> a pesar de tener menos visitas que los computadores. Esto sugiere que campañas dirigidas a móviles pueden ser más rentables para la empresa.</p>
-  <p>Además, se analizaron otras métricas como la tasa de conversión, el promedio de compra por usuario, el comportamiento de los clientes y el costo de adquisición por canal, permitiendo priorizar las fuentes más eficientes y rentables.</p>
+  <p>Este gráfico muestra que, aunque los dispositivos de escritorio reciben más visitas, <strong>los dispositivos táctiles generan un mayor retorno de inversión (ROMI).</strong> 
+    Esto sugiere que enfocar las campañas en móviles puede ser más rentable para la empresa.</p>
   <p><a href="https://github.com/dianitais/Analisis_de_metricas_de_marketing_y_ventas_en_Showz" target="_blank">Ver proyecto en GitHub</a></p>
 
   <div class="section">
