--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
   <img src="MarketingShowz.png" alt="ROMI por dispositivo" width="80%" style="border-radius: 10px;">
   <p>Este proyecto analiza datos reales de visitas, campañas y ventas para detectar oportunidades de mejora en la estrategia de marketing digital. </p>
   <p>Este gráfico muestra que, aunque los dispositivos de escritorio reciben más visitas, <strong>los dispositivos táctiles generan un mayor retorno de inversión (ROMI).</strong> 
-    Esto sugiere que enfocar las campañas en móviles puede ser más rentable para la empresa.</p>
+Esto indica que enfocar las campañas en móviles podría ser más rentable para la empresa.</p>
   <p><a href="https://github.com/dianitais/Analisis_de_metricas_de_marketing_y_ventas_en_Showz" target="_blank">Ver proyecto en GitHub</a></p>
 
   <div class="section">
