--- a/index.html
+++ b/index.html
@@ -92,10 +92,11 @@
 
   <!-- Proyecto 3 -->
   <h3>📈 Análisis de métricas de marketing y ventas en Showz</h3>
-  <img src="MarketingShowz.png" alt="ROMI por dispositivo" width="80%" style="border-radius: 10px;">
-  <p>Este proyecto analiza datos reales de visitas, campañas y ventas para detectar oportunidades de mejora en la estrategia de marketing digital. </p>
-  <p>Este gráfico muestra que, aunque los dispositivos de escritorio reciben más visitas, <strong>los dispositivos táctiles generan un mayor retorno de inversión (ROMI).</strong> 
-Esto indica que enfocar las campañas en móviles podría ser más rentable para la empresa.</p>
+  <img src="MarketingShowz.png" alt="Desempeño de marketing por dispositivo" width="80%" style="border-radius: 10px;">
+  <p>Este proyecto analiza datos reales de visitas, campañas y ventas para detectar oportunidades de mejora en la estrategia de marketing digital.</p>
+  <p>El gráfico compara dos métricas clave: <strong>retorno de inversión en marketing (ROMI)</strong> y <strong>tasa de conversión</strong> según el tipo de dispositivo. 
+  Aunque los dispositivos de escritorio presentan una mayor tasa de conversión, los dispositivos táctiles generan un mayor retorno, 
+  lo que sugiere que enfocar las campañas en móviles podría ser más rentable para la empresa.</p>
   <p><a href="https://github.com/dianitais/Analisis_de_metricas_de_marketing_y_ventas_en_Showz" target="_blank">Ver proyecto en GitHub</a></p>
 
   <div class="section">
