--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
   <p><a href="https://github.com/dianitais/Analisis_de_metricas_de_marketing_y_ventas_en_Showz" target="_blank">Ver proyecto en GitHub</a></p>
 
   <div class="section">
-  <h2><span class="emoji">👩‍💻</span> ¿Eres técnico o técnica y quieres ver más?</h2>
+  <h2><span class="emoji">🧰</span> 🔍 ¿Te interesa explorar el lado más técnico de mis proyectos?</h2>
   <p>
     Puedes explorar mi portafolio completo con notebooks, dashboards y proyectos en código desde mi perfil de GitHub:<br>
     🔗 <a href="https://github.com/dianitais" target="_blank">github.com/dianitais</a>
