--- a/index.html
+++ b/index.html
@@ -76,11 +76,17 @@
   <div class="section">
   <h2><span class="emoji">📊</span> Proyectos destacados</h2>
 
-  <!-- Proyecto 1 -->
+  <!-- Proyecto 4 -->
+  <h3>🔍 Historial de Tendencias de Videos en YouTube</h3>
+  <img src="TendenciasVideosYoutube.png" alt="Dashboard videos youtube" width="85%" style="border-radius: 10px;">
+  <p>Proyecto desarrollado en Tableau para analizar qué tipos de videos se volvieron tendencia en distintas regiones del mundo. Visualicé la evolución de las categorías más populares a lo largo del tiempo y comparé el comportamiento de los usuarios por país.</p>
+  <p><a href="https://github.com/dianitais/Analisis_de_Datos_de_Vehiculos_con_Streamlit" target="_blank">Ver proyecto en GitHub</a></p>
+    
+  <!-- Proyecto 3 -->
   <h3>🔍 Análisis de vehículos con Streamlit</h3>
   <img src="StreamliteVehiculos.png" alt="Dashboard vehículos" width="85%" style="border-radius: 10px;">
   <p>Este dashboard muestra datos reales de vehículos usados y permite ver cuántos kilómetros tienen y cómo influye esto en el precio. Es útil para descubrir si un auto con más recorrido es realmente más barato.</p>
-  <p><a href="https://github.com/dianitais/Analisis_de_Datos_de_Vehiculos_con_Streamlit" target="_blank">Ver proyecto en GitHub</a></p>
+  <p><a href="https://github.com/dianitais/Tendencias_Videos_Youtube" target="_blank">Ver proyecto en GitHub</a></p>
 
   <!-- Proyecto 2 -->
   <h3>🚕 Exploración de datos de taxis en Chicago</h3>
@@ -90,7 +96,7 @@
   <p> Además, exploré qué barrios recibieron más viajes ese mes y cuáles compañías concentraron la mayor cantidad de trayectos, para entender cómo se mueve la ciudad desde distintos ángulos.</p>
   <p><a href="https://github.com/dianitais/DA_Taxis_Chicago" target="_blank">Ver proyecto en GitHub</a></p>
 
-  <!-- Proyecto 3 -->
+  <!-- Proyecto 1 -->
   <h3>📈 Análisis de métricas de marketing y ventas en Showz</h3>
   <img src="MarketingShowz.png" alt="Desempeño de marketing por dispositivo" width="100%" style="border-radius: 10px;">
   <p>Este proyecto analiza datos reales de visitas, campañas y ventas para detectar oportunidades de mejora en la estrategia de marketing digital.</p>
