--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
   <h3>🔍 Historial de Tendencias de Videos en YouTube</h3>
   <img src="TendenciasVideosYoutube.png" alt="Dashboard videos youtube" width="85%" style="border-radius: 10px;">
   <p>Proyecto desarrollado en Tableau para analizar qué tipos de videos se volvieron tendencia en distintas regiones del mundo. Visualicé la evolución de las categorías más populares a lo largo del tiempo y comparé el comportamiento de los usuarios por país.</p>
-  <p><a href="https://github.com/dianitais/Tendencias_Videos_Youtube" target="_blank">Ver proyecto en GitHub</a></p>
+  <p><a href="https://public.tableau.com/app/profile/diana.gonzalez3563/viz/Proyecto12_17422218116500/Dashboard1" target="_blank">Ver proyecto en Tableau</a></p>
   
   <!-- Proyecto 3 -->
   <h3>🔍 Análisis de vehículos con Streamlit</h3>
