--- a/index.html
+++ b/index.html
@@ -74,10 +74,10 @@
   </div>
 
   <div class="section">
-  <h2><span class="emoji">📊</span> Proyectos destacados</h2>
+  <h1 style="font-size: 2em; font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif; font-weight: bold; margin-top: 60px; margin-bottom: 20px;">📊 Proyectos destacados</h1>
 
   <!-- Proyecto 4 -->
-  <h2 style="margin-top: 40px; font-size: 1.6em;">🔍 Historial de Tendencias de Videos en YouTube</h2>
+  <h3">🔍 Historial de Tendencias de Videos en YouTube</h3>
   <img src="TendenciasVideosYoutube.png" alt="Dashboard videos youtube" width="85%" style="border-radius: 10px;">
   <p>Proyecto desarrollado en Tableau para analizar qué tipos de videos fueron tendencia en diferentes regiones del mundo. Visualicé la evolución de las categorías más populares a lo largo del tiempo y comparé el comportamiento de los usuarios por país.</p>
   <p><a href="https://public.tableau.com/app/profile/diana.gonzalez3563/viz/Proyecto12_17422218116500/Dashboard1" target="_blank">Ver proyecto en Tableau</a></p>
