--- a/index.html
+++ b/index.html
@@ -83,12 +83,14 @@
   <p><a href="https://public.tableau.com/app/profile/diana.gonzalez3563/viz/Proyecto12_17422218116500/Dashboard1" target="_blank">Ver proyecto en Tableau</a></p>
   
   <!-- Proyecto 3 -->
+  <hr style="border: 1px solid #ccc; margin-top: 40px; margin-bottom: 30px;">
   <h3>🔍 Análisis de vehículos con Streamlit</h3>
   <img src="StreamliteVehiculos.png" alt="Dashboard vehículos" width="85%" style="border-radius: 10px;">
   <p>Este dashboard muestra datos reales de vehículos usados y permite ver cuántos kilómetros tienen y cómo influye esto en el precio. Es útil para descubrir si un auto con más recorrido es realmente más barato.</p>
   <p><a href="https://github.com/dianitais/Tendencias_Videos_Youtube" target="_blank">Ver proyecto en GitHub</a></p>
 
   <!-- Proyecto 2 -->
+  <hr style="border: 1px solid #ccc; margin-top: 40px; margin-bottom: 30px;">
   <h3>🚕 Exploración de datos de taxis en Chicago</h3>
   <img src="Taxis_Chicago.png" alt="Duración de viajes en días lluviosos" width="100%" style="border-radius: 10px;">
   <p>  Este proyecto analiza viajes en taxi durante los fines de semana en Chicago y busca responder una pregunta clave: <strong>¿la duración promedio de los viajes cambia cuando llueve?</strong>  </p>
@@ -97,6 +99,7 @@
   <p><a href="https://github.com/dianitais/DA_Taxis_Chicago" target="_blank">Ver proyecto en GitHub</a></p>
 
   <!-- Proyecto 1 -->
+  <hr style="border: 1px solid #ccc; margin-top: 40px; margin-bottom: 30px;">
   <h3>📈 Análisis de métricas de marketing y ventas en Showz</h3>
   <img src="MarketingShowz.png" alt="Desempeño de marketing por dispositivo" width="100%" style="border-radius: 10px;">
   <p>Este proyecto analiza datos reales de visitas, campañas y ventas para detectar oportunidades de mejora en la estrategia de marketing digital.</p>
