--- a/index.html
+++ b/index.html
@@ -77,6 +77,7 @@
   <h1 style="font-size: 2em; font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif; font-weight: bold; margin-top: 60px; margin-bottom: 20px;">📊 Proyectos destacados</h1>
 
   <!-- Proyecto 4 -->
+  <hr style="border: 1px solid #ccc; margin-top: 40px; margin-bottom: 30px;">
   <h3">🔍 Historial de Tendencias de Videos en YouTube</h3>
   <img src="TendenciasVideosYoutube.png" alt="Dashboard videos youtube" width="85%" style="border-radius: 10px;">
   <p>Proyecto desarrollado en Tableau para analizar qué tipos de videos fueron tendencia en diferentes regiones del mundo. Visualicé la evolución de las categorías más populares a lo largo del tiempo y comparé el comportamiento de los usuarios por país.</p>
