--- a/index.html
+++ b/index.html
@@ -108,7 +108,8 @@
   Aunque los dispositivos de escritorio presentan una mayor tasa de conversión, los dispositivos táctiles generan un mayor retorno, 
   lo que sugiere que enfocar las campañas en móviles podría ser más rentable para la empresa.</p>
   <p><a href="https://github.com/dianitais/Analisis_de_metricas_de_marketing_y_ventas_en_Showz" target="_blank">Ver proyecto en GitHub</a></p>
-
+  <hr style="border: 1px solid #ccc; margin-top: 40px; margin-bottom: 30px;">
+  
   <div class="section">
   <h2><span class="emoji">🧰</span> 🔍 ¿Te interesa explorar el lado más técnico de mis proyectos?</h2>
   <p>
