--- a/index.html
+++ b/index.html
@@ -74,8 +74,8 @@
   </div>
 
   <div class="section">
-  <h1 style="font-size: 2em; font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif; font-weight: bold; margin-top: 60px; margin-bottom: 20px;">📊 Proyectos destacados</h1>
-
+  <h1 style="font-size: 1.5em; font-weight: bold; color: #1f4e79; margin-top: 40px;">📊 Proyectos destacados</h1>
+      
   <!-- Proyecto 4 -->
   <hr style="border: 1px solid #ccc; margin-top: 40px; margin-bottom: 30px;">
   <h3">🔍 Historial de Tendencias de Videos en YouTube</h3>
