--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
       
   <!-- Proyecto 4 -->
   <hr style="border: 1px solid #ccc; margin-top: 40px; margin-bottom: 30px;">
-  <h3">🔍 Historial de Tendencias de Videos en YouTube</h3>
+  <h3>🔍 Historial de Tendencias de Videos en YouTube</h3>
   <img src="TendenciasVideosYoutube.png" alt="Dashboard videos youtube" width="85%" style="border-radius: 10px;">
   <p>Proyecto desarrollado en Tableau para analizar qué tipos de videos fueron tendencia en diferentes regiones del mundo. Visualicé la evolución de las categorías más populares a lo largo del tiempo y comparé el comportamiento de los usuarios por país.</p>
   <p><a href="https://public.tableau.com/app/profile/diana.gonzalez3563/viz/Proyecto12_17422218116500/Dashboard1" target="_blank">Ver proyecto en Tableau</a></p>
