--- a/index.html
+++ b/index.html
@@ -75,7 +75,15 @@
 
   <div class="section">
   <h1 style="font-size: 2em; font-weight: bold; color: #0a2f5c; margin-top: 40px;">📊 Proyectos destacados</h1>
-      
+
+  <!-- Proyecto 5 -->
+  <hr style="border: 1px solid #ccc; margin-top: 40px; margin-bottom: 30px;">
+  <h3>📊 Análisis de Estacionalidad por Sectores del Mercado Bursátil</h3> <br>
+  <!--<img src=" " alt="" width="85%" style="border-radius: 10px;">-->
+  <p>Este proyecto explora los comportamientos estacionales de los principales sectores del mercado financiero utilizando datos históricos de ETFs sectoriales. Analicé patrones de rendimiento a lo largo del año para identificar periodos típicamente alcistas o bajistas en sectores como tecnología, energía, salud, consumo y más.
+El objetivo es facilitar la toma de decisiones estratégicas en inversiones, destacando momentos oportunos para observar ciertos sectores con mayor atención.</p>
+  <p><a href=" " target="_blank">Ver proyecto en Tableau</a></p>
+    
   <!-- Proyecto 4 -->
   <hr style="border: 1px solid #ccc; margin-top: 40px; margin-bottom: 30px;">
   <h3>🔍 Historial de Tendencias de Videos en YouTube</h3> <br>
