--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
 
   <!-- Proyecto 5 -->
   <hr style="border: 1px solid #ccc; margin-top: 40px; margin-bottom: 30px;">
-  <h3>📊 Análisis de Estacionalidad por Sectores del Mercado Bursátil</h3> <br>
+  <h3>📈📉 Análisis de Estacionalidad por Sectores del Mercado Bursátil</h3> <br>
   <!--<img src=" " alt="" width="85%" style="border-radius: 10px;">-->
   <p>Este proyecto explora los comportamientos estacionales de los principales sectores del mercado financiero utilizando datos históricos de ETFs sectoriales. Analicé patrones de rendimiento a lo largo del año para identificar periodos típicamente alcistas o bajistas en sectores como tecnología, energía, salud, consumo y más.
 El objetivo es facilitar la toma de decisiones estratégicas en inversiones, destacando momentos oportunos para observar ciertos sectores con mayor atención.</p>
@@ -93,7 +93,7 @@ El objetivo es facilitar la toma de decisiones estratégicas en inversiones, des
   
   <!-- Proyecto 3 -->
   <hr style="border: 1px solid #ccc; margin-top: 40px; margin-bottom: 30px;">
-  <h3>🔍 Análisis de vehículos con Streamlit</h3>
+  <h3>🚗 Análisis de vehículos con Streamlit</h3>
   <img src="StreamliteVehiculos.png" alt="Dashboard vehículos" width="85%" style="border-radius: 10px;">
   <p>Este dashboard muestra datos reales de vehículos usados y permite ver cuántos kilómetros tienen y cómo influye esto en el precio. Es útil para descubrir si un auto con más recorrido es realmente más barato.</p>
   <p><a href="https://github.com/dianitais/Tendencias_Videos_Youtube" target="_blank">Ver proyecto en GitHub</a></p>
