--- a/index.html
+++ b/index.html
@@ -78,12 +78,13 @@
 
   <!-- Proyecto 5 -->
   <hr style="border: 1px solid #ccc; margin-top: 40px; margin-bottom: 30px;">
-  <h3>📈📉 Análisis de Estacionalidad por Sectores del Mercado Bursátil</h3> <br>
+  <h3>📈📉 Análisis Estacional Interactivo por Sectores del Mercado Bursátil</h3> <br>
   <!--<img src=" " alt="" width="85%" style="border-radius: 10px;">-->
-  <p>El objetivo es facilitar la toma de decisiones estratégicas en inversiones, destacando momentos oportunos para observar ciertos sectores con mayor atención.
-    Este proyecto explora los comportamientos estacionales de los principales sectores del mercado financiero utilizando datos históricos de ETFs sectoriales. Analicé patrones de rendimiento a lo largo del año para identificar periodos típicamente alcistas o bajistas en sectores como tecnología, energía, salud, consumo y más.
+  <p>Este proyecto visualiza el comportamiento histórico de distintos sectores del mercado bursátil mediante datos de ETFs (fondos cotizados en bolsa) sectoriales. 
+    Utilizando un enfoque por quincenas, permite al usuario explorar variaciones porcentuales en sectores como tecnología, salud, energía, consumo y otros, según el periodo y sector que desee analizar. 
+    El dashboard interactivo facilita identificar tendencias y comparar periodos de forma clara y accesible, apoyando el análisis visual y la toma de decisiones estratégicas basadas en datos.
 </p>
-  <p><a href=" " target="_blank">Ver proyecto en Tableau</a></p>
+  <p><a href="https://public.tableau.com/app/profile/diana.gonzalez3563/viz/EstacionalidadesMercadoBurstil/Hoja1" target="_blank">Ver proyecto en Tableau</a></p>
     
   <!-- Proyecto 4 -->
   <hr style="border: 1px solid #ccc; margin-top: 40px; margin-bottom: 30px;">
