--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
   <!-- Proyecto 5 -->
   <hr style="border: 1px solid #ccc; margin-top: 40px; margin-bottom: 30px;">
   <h3>📈📉 Análisis Estacional Interactivo por Sectores del Mercado Bursátil</h3> <br>
-  <!--<img src=" " alt="" width="85%" style="border-radius: 10px;">-->
+  <img src="QuincenasSectoresMB.png" alt="Dashboard Sectores Mercado Bursátil" width="85%" style="border-radius: 10px;">
   <p>Este proyecto visualiza el comportamiento histórico de distintos sectores del mercado bursátil mediante datos de ETFs (fondos cotizados en bolsa) sectoriales. 
     Utilizando un enfoque por quincenas, permite al usuario explorar variaciones porcentuales en sectores como tecnología, salud, energía, consumo y otros, según el periodo y sector que desee analizar. 
     El dashboard interactivo facilita identificar tendencias y comparar periodos de forma clara y accesible, apoyando el análisis visual y la toma de decisiones estratégicas basadas en datos.
