--- a/index.html
+++ b/index.html
@@ -80,9 +80,9 @@
   <hr style="border: 1px solid #ccc; margin-top: 40px; margin-bottom: 30px;">
   <h3>📈📉 Análisis Estacional Interactivo por Sectores del Mercado Bursátil</h3> <br>
   <img src="QuincenasSectoresMB.png" alt="Dashboard Sectores Mercado Bursátil" width="85%" style="border-radius: 10px;">
-  <p>Este proyecto visualiza el comportamiento histórico de distintos sectores del mercado bursátil mediante datos de ETFs (fondos cotizados en bolsa) sectoriales. 
+  <p>El dashboard interactivo facilita identificar tendencias y comparar periodos de forma clara y accesible, apoyando el análisis visual y la toma de decisiones estratégicas basadas en datos.
+    Este proyecto visualiza el comportamiento histórico de distintos sectores del mercado bursátil mediante datos de ETFs (fondos cotizados en bolsa) sectoriales. 
     Utilizando un enfoque por quincenas, permite al usuario explorar variaciones porcentuales en sectores como tecnología, salud, energía, consumo y otros, según el periodo y sector que desee analizar. 
-    El dashboard interactivo facilita identificar tendencias y comparar periodos de forma clara y accesible, apoyando el análisis visual y la toma de decisiones estratégicas basadas en datos.
 </p>
   <p><a href="https://public.tableau.com/app/profile/diana.gonzalez3563/viz/EstacionalidadesMercadoBurstil/Hoja1" target="_blank">Ver proyecto en Tableau</a></p>
     
@@ -90,14 +90,15 @@
   <hr style="border: 1px solid #ccc; margin-top: 40px; margin-bottom: 30px;">
   <h3>🔍 Historial de Tendencias de Videos en YouTube</h3> <br>
   <img src="TendenciasVideosYoutube.png" alt="Dashboard videos youtube" width="85%" style="border-radius: 10px;">
-  <p>Proyecto desarrollado en Tableau para analizar qué tipos de videos fueron tendencia en diferentes regiones del mundo. Visualicé la evolución de las categorías más populares a lo largo del tiempo y comparé el comportamiento de los usuarios por país.</p>
+  <p>Proyecto desarrollado en Tableau para analizar qué tipos de videos fueron tendencia en diferentes regiones del mundo. 
+    Visualicé la evolución de las categorías más populares a lo largo del tiempo y comparé el comportamiento de los usuarios por país.</p>
   <p><a href="https://public.tableau.com/app/profile/diana.gonzalez3563/viz/Proyecto12_17422218116500/Dashboard1" target="_blank">Ver proyecto en Tableau</a></p>
   
   <!-- Proyecto 3 -->
   <hr style="border: 1px solid #ccc; margin-top: 40px; margin-bottom: 30px;">
   <h3>🚗 Análisis de vehículos con Streamlit</h3>
   <img src="StreamliteVehiculos.png" alt="Dashboard vehículos" width="85%" style="border-radius: 10px;">
-  <p>Este dashboard muestra datos reales de vehículos usados y permite ver cuántos kilómetros tienen y cómo influye esto en el precio. Es útil para descubrir si un auto con más recorrido es realmente más barato.</p>
+  <p>Este dashboard es útil para descubrir si un auto con más recorrido es realmente más barato, muestra datos reales de vehículos usados y permite ver cuántos kilómetros tienen y cómo influye esto en el precio.</p>
   <p><a href="https://github.com/dianitais/Tendencias_Videos_Youtube" target="_blank">Ver proyecto en GitHub</a></p>
 
   <!-- Proyecto 2 -->
