--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
   <p>  Este proyecto analiza viajes en taxi durante los fines de semana en Chicago y busca responder una pregunta clave: <strong>¿la duración promedio de los viajes cambia cuando llueve?</strong>  </p>
   <p>  Usando datos históricos, encontré que <strong>los sábados lluviosos tienden a tener viajes más largos</strong> que los días secos. La diferencia fue estadísticamente significativa, lo que sugiere que <em>el clima afecta el comportamiento de los pasajeros o el tráfico en la ciudad.</em> </p>
   <p> Además, exploré qué barrios recibieron más viajes ese mes y cuáles compañías concentraron la mayor cantidad de trayectos, para entender cómo se mueve la ciudad desde distintos ángulos.</p>
-  <p><a href="https://github.com/dianitais/DA_Taxis_Chicago/blob/main/TaxisChicago.ipynb" target="_blank">Ver proyecto en GitHub</a></p>
+  <p><a href="https://github.com/dianitais/DA_Taxis_Chicago" target="_blank">Ver proyecto en GitHub</a></p>
 
   <!-- Proyecto 1 -->
   <hr style="border: 1px solid #ccc; margin-top: 40px; margin-bottom: 30px;">
